# taiga

./: CMakeLists.txt  README.md
cmake/modules/: ROOTMacros.cmake  TaigaMacro.cmake  WriteConfigFile.cmake
cmake/scripts/: config.csh.in  config.sh.in  root_macro.sh.in
docs/: codeWritingRules.txt
macro/hillas/: tmp.C
macro/mc_trigger/: read_camera.C  run.sh
macro/mc_trigger/input_data/: md1-250300-noi2-trigger6-no-cleaning.txt
macro/mc_trigger/make_root_tree/: make_data_tree.C
macro/mc_trigger/trigger/: sim_trigger.C
macro/test/: run.sh  taigaTestCamera.C  taigaTestEvent.C  testCamera.C  testEvent.C  testRun.C  testRunPeds.C
macro/test/data/: xy_turn_2019s_EP.txt
objects/: CMakeLists.txt  TAIGACamera.cxx  TAIGACamera.h  TAIGACluster.cxx  TAIGACluster.h  TAIGAEvent.cxx  TAIGAEvent.h  TAIGAGlobalConstants.h  TAIGAObjectsLinkDef.h  TAIGAPixel.cxx  TAIGAPixel.h  TAIGARun.cxx  TAIGARun.h
